--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,16 +14,16 @@ find_package(GTest REQUIRED)
 
 include_directories(test)
 add_executable(Test test/test.cpp
-                    src/MineSweeperMap.cpp
-)
+        src/MineSweeperMap.cpp
+        )
 
 target_link_libraries(Test GTest::gtest GTest::gtest_main)
 
-add_executable(Mines  main.cpp
-                      src/MineSweeperMap.cpp
-                      src/GameSingleton.cpp
+add_executable(Mines main.cpp
+        src/MineSweeperMap.cpp
+        src/GameSingleton.cpp
 
-)
+        src/MineSweeperUI.cpp)
 
 target_link_libraries(Mines sfml-graphics sfml-audio)
 target_link_libraries(Mines widget_lib)
